<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@drawable/bg_dialog"
            android:padding="@dimen/_12sdp">

            <View
                android:id="@+id/view_logo"
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextViewBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_logo"
                android:layout_centerHorizontal="true"
                android:text="@string/text_no_internet_connection"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/tv_content"
                style="@style/TextViewRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:text="@string/text_no_internet_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@id/tv_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_retry"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_fill_24"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/text_retry"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/img_no_internet" />
    </RelativeLayout>
</layout>