<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/bg_dialog"
                android:padding="@dimen/_12sdp">

                <View
                    android:id="@+id/view_logo"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_close"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentEnd="true"
                    android:tint="@color/white_40"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_close" />

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/TextViewBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/view_logo"
                    android:layout_centerHorizontal="true"
                    android:text="@string/text_rate_us"
                    android:textColor="@color/white_40"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/tv_content"
                    style="@style/TextViewRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_title"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="center"
                    android:text="@string/text_rate_content"
                    android:textColor="@color/white_60"
                    android:textSize="@dimen/_10ssp" />

                <com.willy.ratingbar.ScaleRatingBar
                    android:id="@+id/simpleRatingBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    app:srb_clickable="true"
                    app:srb_drawableEmpty="@drawable/ic_star_empty"
                    app:srb_drawableFilled="@drawable/ic_star_fill"
                    app:srb_scrollable="true"
                    app:srb_starHeight="@dimen/_24sdp"
                    app:srb_starWidth="@dimen/_24sdp"
                    app:srb_stepSize="1" />

                <TextView
                    android:id="@+id/tv_rate_now"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_below="@id/simpleRatingBar"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:background="@drawable/bg_btn_fill_24"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_32sdp"
                    android:text="@string/text_rate_now"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_start"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/img_star_5" />
        </RelativeLayout>
    </LinearLayout>
</layout>